// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Box Different padding for different screen sizes  1`] = `
.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #F5F5F5;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  background-color: #0046FF;
  display: inline-block;
}

.c2 {
  background-color: #F5F5F5;
}

@media (min-width:360px) {
  .c3 {
    font-size: 16px;
    line-height: 1.5;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          color={[Function]}
        >
          Some stuff here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Margin 1`] = `
.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #F5F5F5;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  margin: 16px;
}

.c0 {
  background-color: #0046FF;
  display: inline-block;
}

.c2 {
  background-color: #F5F5F5;
}

@media (min-width:360px) {
  .c3 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
        color={[Function]}
      >
        Some stuff here
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Margin and different margin Y-axis 1`] = `
.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #F5F5F5;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  margin: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c0 {
  background-color: #0046FF;
  display: inline-block;
}

.c2 {
  background-color: #F5F5F5;
}

@media (min-width:360px) {
  .c3 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
        color={[Function]}
      >
        Some stuff here
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Padding  1`] = `
.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #F5F5F5;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  padding: 16px;
}

.c0 {
  background-color: #0046FF;
  display: inline-block;
}

.c2 {
  background-color: #F5F5F5;
}

@media (min-width:360px) {
  .c3 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          color={[Function]}
        >
          Some stuff here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Padding and different X-axis and left  1`] = `
.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #F5F5F5;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  padding: 16px;
  padding-left: 0px;
  padding-right: 8px;
}

.c0 {
  background-color: #0046FF;
  display: inline-block;
}

.c2 {
  background-color: #F5F5F5;
}

@media (min-width:360px) {
  .c3 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          color={[Function]}
        >
          Some stuff here
        </span>
      </div>
    </div>
  </div>
</div>
`;
